maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:77: error: value et is not a member of Boolean
    if (virages==0 et getDirection==Direction.NORD) {
                   ^